// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox renders when checked 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "marginBottom": 20,
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#FFF",
          "borderColor": "#000",
          "borderWidth": 1,
          "height": 20,
          "marginRight": 10,
          "width": 20,
        },
        {
          "backgroundColor": "#000",
        },
      ]
    }
  />
  <Text>
    foo
  </Text>
</View>
`;

exports[`CheckBox renders when un-checked 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "marginBottom": 20,
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#FFF",
          "borderColor": "#000",
          "borderWidth": 1,
          "height": 20,
          "marginRight": 10,
          "width": 20,
        },
        false,
      ]
    }
  />
  <Text>
    foo
  </Text>
</View>
`;
